# isotime

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DESIGN_DECISIONS.md  FAQ.md  GEMINI.md  GOVERNANCE.md  LICENSE.md  MANIFESTO.md  PHILOSOPHY.md  PRINCIPLES.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY.md  STRATEGY.md  STRUCTURE.tree  SUPPORT.md  TROUBLESHOOTING.md  VISION.md  data_001.sst  isotime.wal  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr_automation.yml  security.yml  sonar.yml
.superpowers/brainstorm/46732-1776265909/content/: compaction.html  design-overview.html  memtable.html  overview.html
.superpowers/brainstorm/46732-1776265909/state/: server-info
docs/superpowers/plans/: 2026-04-17-encrypted-sstables.md  2026-04-17-global-cas.md  2026-04-17-shm-delta-streamer.md  2026-04-17-simd-delta-compressor.md
docs/superpowers/specs/: 2026-04-17-shm-delta-streamer-design.md  2026-04-17-simd-delta-compressor-design.md
locales/: README.ja.md  README.th.md  README.zh.md
src/: ffi.rs  lib.rs  main.rs
src/storage/: bloom.rs  bus.rs  cas.rs  compaction.rs  compressor.rs  encryption.rs  memtable.rs  mod.rs  schema.fbs  schema_generated.rs  sstable.rs  tiering.rs  wal.rs
