[package]
name = "isotime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
flatbuffers = "25.12.19"
crossbeam-skiplist = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
memmap2 = "0.9.10"
crc64 = "2.0.0"

[features]
default = []
simd = []

[[bin]]
name = "isotime-bus-top"
path = "src/bin/bus_top.rs"
